tests/NormalTests/paczka1/small_fuzzy/59337428.err
Error in line 7: WcG2Dz S699 29,3
Error in line 9: WcG2Dz A282 49,3
Error in line 16: WcG2Dz A148 -3,92
